# open-screenstudio

./: .gitignore  README.md  check_sdk.sh  index.html  package.json  tailwind.config.js  update_xcode.sh
.github/workflows/: ci.yml  release.yml
.opencode/command/: create-issue.md
.opencode/plans/: 1768580171158-gentle-garden.md  1768696567290-misty-wizard.md  1768697867405-gentle-cabin.md  1768712614358-sunny-harbor.md  1768719963468-stellar-pixel.md  1768764326707-tidy-wolf.md  1768765962302-lucky-meadow.md  1768766766245-calm-comet.md
docs/: SCREENCAPTUREKIT_FIX.md  TECHNICAL_PLAN.md  UPDATE_XCODE.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/capture/: mod.rs  traits.rs
src-tauri/src/capture/input/: channel.rs
src-tauri/src/capture/macos/: input.rs  mod.rs  permissions.rs  screen.rs  system_audio.rs  webcam.rs
src-tauri/src/capture/windows/: input.rs  mod.rs  screen.rs  system_audio.rs
src-tauri/src/commands/: export.rs  mod.rs  project.rs  recording.rs  system.rs
src-tauri/src/export/: ffmpeg.rs  mod.rs  pipeline.rs  types.rs
src-tauri/src/project/: bundle.rs  mod.rs  schema.rs
src-tauri/src/recorder/: channel.rs  coordinator.rs  mod.rs  state.rs
src-tauri/src/utils/: error.rs  mod.rs
src-tauri/src/waveform/: extractor.rs  mod.rs
src/components/editor/: ClickIndicator.tsx  CursorOverlay.tsx  EditorView.tsx  WebcamOverlay.tsx
src/components/export/: ExportDialog.tsx  ExportView.tsx
src/components/recording/: PostRecordingPopup.tsx  (+2 more)
src/stores/: editorStore.ts  playbackStore.ts  projectStore.ts  waveformStore.ts
src/types/: export.ts  project.ts  recording.ts  waveform.ts
src/utils/: layoutUtils.ts  recordingPlayback.ts  sliceUtils.ts
(+9 files in other folders)
